--- a/css/style5.css
+++ b/css/style5.css
@@ -417,8 +417,8 @@ ERROR
       width: 60%;
       float: left;
       margin-left: 20%;
-      margin-top: 10%;
       background-color: pink;
+
     }
 
 
